<resources xmlns:tools="http://schemas.android.com/tools" tools:locale="en">
    <string name="app_name">拾得</string>
    <string name="action_settings">Settings</string>
    <string name="community_gz">晟中社区(广州)</string>
    <string name="community_st">晟中社区(汕头)</string>
    <string name="header_hint_refresh_normal">下拉刷新</string>
    <string name="header_hint_refresh_ready">松开刷新</string>
    <string name="header_hint_refresh_loading">刷新中&#8230;</string>
    <string name="header_hint_refresh_time">更新于：</string>
    <string name="footer_hint_load_normal">加载更多</string>
    <string name="footer_hint_load_ready">松开加载更多</string>
    <string name="dialog_coin_not_enough">请及时充值积分</string>
    <string name="dialog_back_to_award">返回继续抽奖</string>
    <string name="dialog_go_to_charge">前往充值</string>
    <string name="dialog_award_info">获得了尼康相机奖品</string>
    <string name="dialog_go_to_get_award">领取奖品</string>
    <string name="dialog_not_get_award">并没有中奖</string>
    <string name="dialog_get_text">获得</string>
    <string name="dialog_get_coin">--积分</string>
    <string name="dialog_back">返回</string>
    <string name="dialog_award_opening">开奖中 请耐心等待~</string>
    <string name="main_title_address">广东省广州市越秀区</string>
    <string name="main_radio_index">首页</string>
    <string name="main_radio_activity">活动</string>
    <string name="main_radio_mine">我的</string>
    <string name="main_tv_new_activity">最新活动</string>
    <string name="main_tv_qian_dao">签到</string>
    <string name="act_title">活动</string>
    <string name="act_sort_by_produt">奖品分类</string>
    <string name="act_sort_by_all">综合排序</string>
    <string name="act_intput_search">请输入搜索内容</string>
    <string name="product_detail_title">商品详情</string>
    <string name="product_introduce_text">商品介绍:</string>
    <string name="product_view_comment">查看全部评论</string>
    <string name="mine_title">我的</string>
    <string name="mine_setting_jifen">我的金币</string>
    <string name="mine_setting_discount">我的资料</string>
    <string name="mine_setting_address">我的收货地址</string>
    <string name="mine_setting_act_record">夺宝记录</string>
    <string name="mine_setting_award_record">中奖记录</string>
    <string name="mine_setting_show_order">会员中心</string>
    <string name="mine_setting_about_us">关于我们</string>
    <string name="mine_setting_exit">退出登录</string>
    <string name="mine_setting_login">登录</string>
    <string name="mine_setting_register">注册</string>
    <string name="mine_login_or_register">注册/登陆</string>
    <string name="mine_charge_text">充值 / 兑换</string>
    <string name="discover_title_text">发现</string>
    <string name="about_us_title_text">关于我们</string>
    <string name="about_us_banquan_text">版权信息</string>
    <string name="about_us_huan_ying_text">欢迎页</string>
    <string name="about_us_copyright_text">copyright(c)2012-2016</string>
    <string name="about_us_company_text">广东晟中 版权所有</string>
    <string name="reget_address_title">位置信息</string>
    <string name="reget_address_location_txt">定位</string>
    <string name="reget_address_my_location_txt">我的位置</string>
    <string name="reget_address_my_address">定位中...</string>
    <string name="reget_address_search">搜索</string>
    <string name="login_title">登录</string>
    <string name="login_login">登录</string>
    <string name="login_register">立即注册</string>
    <string name="login_forget_password">忘记密码?</string>
    <string name="find_back_password_title">找回密码</string>
    <string name="find_back_phone_num">请输入手机号码</string>
    <string name="find_back_code_num">请输入收到的验证码</string>
    <string name="find_back_send_code_num">获取验证码</string>
    <string name="find_back_next_step">下一步</string>
    <string name="find_reset_password">新密码</string>
    <string name="find_new_password">新密码:</string>
    <string name="find_confirm_new_password">确认密码:</string>
    <string name="register_title">注册</string>
    <string name="register_txt">第三方登录</string>
    <string name="register_ensure_register">提交</string>
    <string name="register_request_code">获取验证码</string>
    <string name="register_nickname_text">请输入昵称</string>
    <string name="register_password_text">请输入密码(6-20位数字或字母)</string>
    <string name="register_password_again_text">请再次填写密码</string>
    <string name="award_detail_title">活动详情</string>
    <string name="activity_detail_title">奖品详情</string>
    <string name="activity_detail_time_last">剩余时间:</string>
    <string name="activity_detail_time">-天--小时--分</string>
    <string name="activity_detail_award_left">剩余奖品:</string>
    <string name="activity_detail_award_count">已有</string>
    <string name="activity_detail_award_count1">人获奖</string>
    <string name="activity_detail_act_title">iPhone6s</string>
    <string name="get_award_title">领取奖品</string>
    <string name="manager_address_title">收货地址管理</string>
    <string name="choose_address_title">选择地址管理</string>
    <string name="edit_address_edit">确认修改</string>
    <string name="edit_address_add">新增收货地址</string>
    <string name="edit_address_name">联&#160;&#160;系&#160;&#160;人</string>
    <string name="edit_address_relative">关&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;系</string>
    <string name="edit_address_phone">联系电话</string>
    <string name="edit_address_address">联系地址</string>
    <string name="edit_current_address">获取当前位置</string>
    <string name="title_activity_act_detail">ActDetailActivity</string>
    <string name="title_activity_reget_address">RegetAddressActivity</string>
    <string name="title_activity_zoom_in_image">ZoomInImageActivity</string>
    <string name="recharge_title">充值</string>
    <string name="recharge_confirm">确认</string>
    <string name="select_cities_title">选择城市</string>
    <string name="title_activity_about_us">AboutUsActivity</string>
    <string name="small_prizes_title">领取奖品</string>
    <string name="small_prizes_congratulation">恭喜你获得</string>
    <string name="duobao_record_title">夺宝记录</string>
    <string name="look_for_num"><u>查看我的号码</u></string>
    <string name="title_activity_my_coin">MyCoinActivity</string>
    <string name="title_activity_software_download">SoftwareDownloadActivity</string>
    <string name="title_activity_award_style">AwardStyleActivity</string>
    <string name="award_style_title">抽奖类型</string>
    <string name="title_activity_award_pool">AwardPoolActivity</string>
    <string name="award_pool_text">奖品池</string>
    <string name="award_pool_loading_text">加载中..</string>
    <string name="award_pool_act_time_text">活动时间:</string>
    <string name="shop_title_text">拾得折扣商城</string>
    <string name="regist_by_rqcode_text">注册社区</string>
    <string name="title_activity_first_use_guide">FirstUseGuideActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="skip">跳过</string>
    <string name="experience">立即体验</string>
    <string name="et_user_name">请输入用户名</string>
    <string name="et_user_pwd">请输入密码</string>
    <string name="account_or_pwd_null">输入的密码和账户不能为空</string>
    <string name="ensure">确认</string>
    <string name="add_list_title">添加的设备</string>
    <string name="dev_sn_show">设备Sn</string>
    <string name="register">设置WIFI参数</string>
    <string name="total">合计:￥%1$s</string>
    <string name="cp_select_city">选择城市</string>
    <string name="cp_hot_city">热门城市</string>
    <string name="cp_located_city">定位城市</string>
    <string name="cp_hint_search_box">请输入城市名或拼音</string>
    <string name="cp_nothing_found">没有搜索结果~</string>
    <string name="cp_locating">正在定位…</string>
    <string name="cp_located_failed">定位失败</string>
    <string name="pref_disable_account">Disable</string>
    <string name="pref_tunnel">Tunnel</string>
    <string name="pref_tunnel_host">Hostname</string>
    <string name="pref_tunnel_port">Port</string>
    <string name="pref_tunnel_mode">Mode</string>
    <string-array name="tunnel_mode_entries">
        <item>disabled</item>
        <item>3G only</item>
        <item>always</item>
        <item>auto</item>
    </string-array>
    <string name="incall_notif_active">Audio call ongoing</string>
    <string name="incall_notif_paused">Paused call ongoing</string>
    <string name="incall_notif_video">Video capturing call ongoing</string>
    <string name="not_ready_to_make_new_call">Not ready for a new call</string>
    <string name="bad_target_uri">Bad contact : %s</string>
    <string name="reset_sas_fmt">Reset verified %s</string>
    <string name="verify_sas_fmt">Verify %s</string>
    <string name="communication_encrypted">Encrypted</string>
    <string name="waiting_for_startup">Starting up…</string>
    <string name="couldnt_accept_call">An error occurred while accepting call</string>
    <string name="error_adding_new_call">Error adding new call</string>
    <string name="transfer_started">Transfer initiated</string>
    <string name="transfer_dialog_title">Transfer call to</string>
    <string name="transfer_to_new_call">New call</string>
    <string name="resume_dialog_title">Resume call</string>
    <string name="cannot_resume_paused_by_remote_call">Cannot resume call paused by remote</string>
    <string name="conf_show_details_text">Show details</string>
    <string name="skipable_error_service_not_ready">Warning: service is not ready</string>
    <string name="close_button_text">Close</string>
    <string name="status_conf_call">conf</string>
    <string name="status_active_call">active</string>
    <string name="state_paused">paused</string>
    <string name="state_paused_by_remote">paused by remote</string>
    <string name="state_streams_running"></string>
    <string name="state_incoming_received">incoming</string>
    <string name="state_outgoing_ringing">ringing</string>
    <string name="state_outgoing_progress">calling</string>
    <string name="mutemic_button_txt">Mute</string>
    <string name="speaker_button_txt">Speaker</string>
    <string name="bluetooth_button_txt">Bluetooth</string>
    <string name="CancelButtonText">Cancel</string>
    <string name="AddCallButtonText">Add call</string>
    <string name="TransferCallButtonText">Transfer call</string>
    <string name="conf_admin_choice_enter">Enter conference</string>
    <string name="conf_admin_choice_leave">Momentarily leave conference</string>
    <string name="conf_admin_choice_terminate">Terminate conference</string>
    <string name="hangup">Hang up</string>
    <string name="conf_simple_merge_bt_txt">Merge</string>
    <string name="conf_simple_transfer_bt_txt">Transfer</string>
    <string name="conf_simple_video_bt_txt">video</string>
    <string name="show_send_dtmfs_button">Dialpad</string>
    <string name="conf_conference">Conference</string>
    <string name="in_conf">You are part of it</string>
    <string name="in_conf_leave">Go out</string>
    <string name="out_conf">You are out of it</string>
    <string name="out_conf_enter">Go in</string>
    <string name="pref_audio_hacks_title">Audio hacks</string>
    <string name="pref_audio_use_specific_mode_title">Use specific mode hack</string>
    <string name="pref_audio_use_specific_mode_summary">0=MODE_NORMAL (default), 2=MODE_IN_CALL</string>
    <string name="pref_audio_hacks_use_routing_api_title">Use routing API hack</string>
    <string name="content_description_pause">Pause</string>
    <string name="content_description_hang_up">挂断</string>
    <string name="content_description_numpad">Numpad</string>
    <string name="content_description_dialer">Dialer</string>
    <string name="content_description_switch_camera">Switch camera</string>
    <string name="content_description_conference">Conference</string>
    <string name="button_transfer">Transfer</string>
    <string name="button_add_call">Add call</string>
    <string name="button_speaker">扬声器</string>
    <string name="button_route">Route</string>
    <string name="button_receiver">Receiver</string>
    <string name="button_bluetooth">Bluetooth</string>
    <string name="button_options">Options</string>
</resources>