<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/small_prize_bg"
    tools:context=".ui.activity.SmallPrizesActivity">

    <RelativeLayout
        android:id="@+id/relative_small_prizes_title"
        android:background="@drawable/main_page_title_bg"
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_title_height">
        <TextView
            android:id="@+id/tv_small_prizes_title"
            android:text="@string/small_prizes_title"
            style="@style/title_style"
            android:textColor="@color/app_base_text_color_deep"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
        <LinearLayout
            android:id="@+id/ll_small_prizes_back"
            android:layout_width="48dp"
            android:orientation="vertical"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/iv_small_prizes_back"
                android:background="#00ffffff"
                android:layout_gravity="center"
                android:src="@drawable/bt_back"
                android:layout_marginTop="12dp"
                android:layout_width="wrap_content"
                android:layout_height="20dp" />
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="120dp"
        android:layout_above="@+id/iv_small_prize_get_integral"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/margin_50"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:textColor="@color/color_font_hese"
            android:textSize="@dimen/font_size_18"
            android:text="@string/small_prizes_congratulation"
            />
        <TextView
            android:id="@+id/tv_small_prizes_integral"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:text="@string/award_pool_loading_text"
            android:textSize="25sp"
            android:layout_marginTop="@dimen/margin_5"
            android:textColor="@color/color_red"
            />
    </LinearLayout>

    <ImageView
        android:id="@+id/iv_small_prize_get_integral"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/get_integral"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/margin_50"
        />
</RelativeLayout>
