<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.activity.RegetAddressActivity">
    <RelativeLayout
        android:id="@+id/relative_main_title"
        android:background="@drawable/main_page_title_bg"
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_title_height">
        <TextView
            android:id="@+id/tv_recharge_title"
            android:text="@string/reget_address_title"
            style="@style/title_style"
            android:textColor="@color/app_base_text_color_deep"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
        <LinearLayout
            android:id="@+id/ll_address_back"
            android:layout_width="48dp"
            android:orientation="vertical"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/iv_recharge_back"
                android:background="#00ffffff"
                android:layout_gravity="center"
                android:src="@drawable/bt_back"
                android:layout_marginTop="12dp"
                android:layout_width="wrap_content"
                android:layout_height="20dp" />
        </LinearLayout>
        <Button
            android:id="@+id/bt_relative_select_cities"
            android:text="选择城市"
            android:layout_alignParentRight="true"
            android:background="@null"
            android:layout_marginRight="15dp"
            android:textColor="@color/app_base_text_color_deep"
            android:textSize="15sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>

    <FrameLayout
        android:id="@+id/fl_reget_frameLayout"
        android:layout_width="match_parent"
        android:layout_below="@id/relative_main_title"
        android:layout_height="match_parent">
        <com.baidu.mapapi.map.MapView
            android:id="@+id/mv_reget_mapView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
        <ImageView
            android:layout_gravity="center"
            android:layout_marginBottom="21dp"
            android:src="@drawable/map_location_icon_red"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/et_backgroud_radius_shape"
            >
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:padding="5dp"
                android:background="@null"
                android:layout_height="35dp" />
            <LinearLayout
                android:layout_width="1dp"
                android:orientation="horizontal"
                android:background="@color/color_divider_background"
                android:layout_marginTop="7dp"
                android:layout_marginBottom="7dp"
                android:layout_height="match_parent"/>
            <LinearLayout
                android:id="@+id/ll_search_address"
                android:layout_width="0dp"
                android:layout_weight="0.1"
                android:orientation="horizontal"
                android:layout_height="match_parent"
                >
                <ImageView
                    android:id="@+id/iv_regaddress_search"
                    android:layout_width="wrap_content"
                    android:layout_height="18dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/search_icon"
                    />
            </LinearLayout>
        </LinearLayout>
        <AutoCompleteTextView
            android:id="@+id/et_reget_search_text"
            android:layout_width="match_parent"
            android:padding="5dp"
            android:completionThreshold="1"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="50dp"
            android:hint="@string/reget_address_search"
            android:background="@null"
            android:layout_height="35dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:padding="5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/et_backgroud_radius_shape"
            android:layout_marginBottom="30dp"
            android:orientation="horizontal"
            >
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:orientation="horizontal"
                        android:layout_height="wrap_content">
                        <ImageView
                            android:layout_width="20dp"
                            android:layout_marginLeft="5dp"
                            android:src="@drawable/my_address"
                            android:layout_height="20dp"
                            />
                        <TextView
                            android:id="@+id/tv_reget_my_location"
                            android:layout_width="wrap_content"
                            android:text="@string/reget_address_my_location_txt"
                            android:gravity="center"
                            android:layout_height="match_parent" />
                    </LinearLayout>
                    <TextView
                        android:id="@+id/tv_reget_address"
                        android:layout_width="wrap_content"
                        android:text="@string/reget_address_my_address"
                        android:maxLines="1"
                        android:ellipsize="end"
                        android:layout_marginLeft="10dp"
                        android:layout_height="wrap_content" />

                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/ll_re_location"
                android:layout_width="0dp"
                android:layout_weight="0.1"
                android:orientation="vertical"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:src="@drawable/re_location_icon"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/reget_address_location_txt"
                    />
            </LinearLayout>

        </LinearLayout>

    </FrameLayout>
</RelativeLayout>
